--- a/index.html
+++ b/index.html
@@ -1,37 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Gallery</title>
+    <title>Food Matching Game</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <header class="header">
-      <h1> Food Quiz </h1>
-
-<span>What's on the Grill?</span>
-<span id="grill" class="grill"></span>
-<span>Is it a hotdog?</span>
-<span>
-	<button id="yes" onclick="javascript: yes();">Yes</button>
-	<button id="no" onclick="javascript: no();">No</button>
-</span>
-<span id="results">
-	You are: 
-	<span id="result-correct" class="correct result">Correct</span>
-	<span id="result-incorrect" class="incorrect result">Incorrect</span>
-</span>
-<span id="counter">
-	Correct: <span id="counter-correct" class="correct">0</span> -
-	Incorrect: <span id="counter-incorrect" class="incorrect">0</span>
-	<br/>
-	Total: <span id="counter-total">0</span>
-	<br/>
-	Accuracy: <span id="counter-accuracy">0</span>%
-	<br/>
-	Speed: <span id="counter-speed">0</span> clicks/minute
-</span>
-      </body>
-  <script>src="script.js"</script>
+</head>
+<body>
+    <div class="game-container">
+        <h1>Match the Food Emoji!</h1>
+        <div id="grill" title="Click an emoji that matches this one"></div>
+        <div id="options"></div>
+        <div id="result-correct" class="result">Correct!</div>
+        <div id="result-incorrect" class="result">Incorrect!</div>
+        <div>Correct: <span id="counter-correct">0</span></div>
+        <div>Incorrect: <span id="counter-incorrect">0</span></div>
+        <div>Total: <span id="counter-total">0</span></div>
+        <div>Accuracy: <span id="counter-accuracy">0</span>%</div>
+        <div>Speed: <span id="counter-speed">0</span> attempts/min</div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
