Update index.html (Titles of the buttons)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>Incorrect: <span id="counter-incorrect">0</span></div>
         <div>Total: <span id="counter-total">0</span></div>
         <div>Accuracy: <span id="counter-accuracy">0</span>%</div>
-        <div>Speed: <span id="counter-speed">0</span> attempts/min</div>
+        <div>Speed: <span id="counter-speed">0</span> attempts/Minute</div>
     </div>
     <script src="script.js"></script>
 </body>
