--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Matching Game</title>
+    <title>Food matching Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="game-container">
-        <h1>Match the Food Emoji!</h1>
+        <h1>Match the correct Emoji!</h1>
         <div id="grill" title="Click an emoji that matches this one"></div>
         <div id="options"></div>
         <div id="result-correct" class="result">Correct!</div>
